Revert "fixed overflow and gray page in github.io"
This reverts commit e5dd06482e9d864d3b7eb0f6a06ad5ae0d45c20f.

--- a/style/home.css
+++ b/style/home.css
@@ -14,10 +14,6 @@
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
-    animation: onLoad 2s linear
-}
-#home.offLoad{
-    animation: offLoad 2s linear
 }
 .button{
     border: solid white 5px;
@@ -26,12 +22,4 @@
     position: absolute;
     left: 300px;
     text-align:center
-}
-@keyframes onLoad{
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
-@keyframes offLoad{
-    0% {opacity: 1;}
-    100% {opacity: 0;}
 }
