--- a/style/scene1.css
+++ b/style/scene1.css
@@ -2,7 +2,7 @@
     height:100px;
     width:650px;
     color:#ffffff; 
-    font-size:x-large;
+    font-size:20px;
     position: absolute;
     left: 50%;
     top: 50%;
